--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p>很高兴look你</p>
 
 <ul>
-  <li> <a href="https://www.baidu.com/people/AJLoveChina">baidu</a> </li>
+  <li> <a href="https://www.baidu.com">baidu</a> </li>
 </ul>
