--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
-<html>
-<meta http-equiv="Coutent-Type" content="text/html; charset=utf-8"/>
-<head>
-<title>自我介绍</title>
-</head>
-<body background="ku.jpg">
-<br/>
-<br/>
-<p>
-<h2> <font color="white">周海洋</font></h2></p>
-<hr color="white"/>
-<br>
-<div id="1"><h4> <font color="white">年龄：21   身高： 176   体重：65 </font> </div>
-<div id="2"><h4><font color="white"> 政治面貌：团员  班级：物联网302 </font> </div>
-<h3 > <font color="white">爱好</font> </h3>
+<p> Hello </p>
+<p>我是LM，这是我的个人网站</p>
+<p>很高兴look你</p>
+
 <ul>
-  <li><font color="white">篮球</font></li>
- <li><font color="white">打游戏</font></li>	
-  <li><font color="white">跑步....</font></li>
-  </font>
+  
+  
+  
+  <li> <a href="https://www.baidu.com">baidu</a> </li>
+  
+  
 </ul>
-<embed src="k.mp3"hidden="true"autoastart="true"loop="true"  >
-</body>
-</html>
